force-app/main/default/objects/cgcloud__Template_Record_Type_Predicate__mdt/cgcloud__Template_Record_Type_Predicate__mdt.object-meta.xml
<CustomObject>
    <label>Template Record Type Predicate</label>
    <pluralLabel>Template Record Type Predicates</pluralLabel>
</CustomObject>