force-app/main/default/objects/cgcloud__Template_Record_Type_Predicate__mdt/fields/cgcloud__Template_Record_Type_Mapping__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Record_Type_Mapping__c</fullName>
    <label>Template Record Type Mapping</label>
    <referenceTo>cgcloud__Template_Record_Type_Mapping__mdt</referenceTo>
    <relationshipLabel>Template Record Type Predicates</relationshipLabel>
    <relationshipName>Template_Record_Type_Predicates</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>