force-app/main/default/objects/cgcloud__Template_Record_Type_Predicate__mdt/fields/cgcloud__Template_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Source_Field__c</fullName>
    <label>Template Source Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>